sshvm in readme

--- a/README
+++ b/README
@@ -4,3 +4,6 @@ they might be of use for you, or they don't.
 
 Contact me for any questions.
 
+
+
+sshvm.expect: A tool to connect to a OpenVZ VE not reachable via ssh.
