--- a/README
+++ b/README
@@ -7,3 +7,4 @@ Contact me for any questions.
 
 
 sshvm.expect: A tool to connect to a OpenVZ VE not reachable via ssh.
+ip_mac.sh: A script to print all IPs (on OS/X): Ethernet, Wireless, External
