fixed typo in readme

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is my collection of sef scripted or adapted tools that i use.
+This is my collection of self scripted or heavily adapted tools i use.
 
 they might be of use for you, or they don't.
 
